--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
-body {
+/* body {
   font-family: Arial, sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   flex-direction: column;
+} */
+.bootstrap-tagsinput {
+  width: 100%;
 }
